# xml_to_db

./: LICENSE  README.md  pyproject.toml
input/: data_small.xml  from_xml.xsd
tests/: test_xml_chicanery.py
uml_class_diagram/: from_xml.pu
xml_chicanery/: main.py
xml_chicanery/model/: __init__.py  from_xml.py
